--- a/supervisor.conf
+++ b/supervisor.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:api]
 priority=1
-command=/bin/bash -c "source /app/bin/activate && uvicorn --port 8000 main:app"
+command=/bin/sh -c ". /app/bin/activate && uvicorn --port 8000 main:app"
 stdout_logfile=/app/log/%(program_name)s.log
 stderr_logfile=/app/log/%(program_name)s.log
 autorestart=true
@@ -11,7 +11,7 @@ startsecs=0
 
 [program:streamlit]
 priority=2
-command=/bin/bash -c "source /app/bin/activate && streamlit run streamlit_app.py --server.headless true --server.port 8001"
+command=/bin/sh -c ". /app/bin/activate && streamlit run streamlit_app.py --server.headless true --server.port 8001"
 stdout_logfile=/app/log/%(program_name)s.log
 stderr_logfile=/app/log/%(program_name)s.log
 autorestart=true
